# aoc

./: .gitignore
2019/01/: main.cpp
2019/02/: main.cpp
2019/03/: main.cpp
2019/04/: main.cpp
2019/05/: main.cpp
2019/06/: comp.sh  main.cpp
2019/07/: main.cpp
2019/08/: main.cpp
2019/09/: main.cpp
2019/10/: main.cpp
2019/11/: main.cpp
2019/12/: main.cpp
2019/13/: main.cpp
2019/14/: main.cpp
2019/15/: main.cpp
2019/16/: main.cpp
2020/01/: main.cpp
2020/02/: main.cpp
2020/03/: main.cpp
2020/04/: main.cpp
2020/05/: main.cpp
2020/06/: main.cpp
2020/07/: main.cpp
2020/08/day/: Cargo.toml
2020/08/day/src/: main.rs
2020/09/: main.cpp
2020/10/: main.cpp
2020/11/: main.cpp
2020/12/: main.cpp
2020/13/: main.cpp
2020/14/: main.cpp
2020/15/: main.cpp
2020/16/: main.cpp
2020/17/: main.cpp
2020/18/: main.cpp
2020/19/: main.cpp
2020/20/: main.cpp
2020/21/: main.cpp
2020/22/: main.cpp
2020/23/: build.zig  main.cpp
2020/23/src/: main.zig
2020/24/: main.cpp
2020/25/: main.cpp
2021/: .gitignore
2021/src/: day9.zig
2022/day16/: Cargo.toml
2023/: .gitignore  1.txt  2.txt  CMakeLists.txt  mainrunner.cpp  profile.h  runtimes.txt
2023/01/: CMakeLists.txt  main.cpp
2023/02/: CMakeLists.txt  main.cpp
2023/03/: CMakeLists.txt  main.cpp
2023/04/: CMakeLists.txt  main.cpp
2023/05/: CMakeLists.txt  main.cpp
2023/06/: CMakeLists.txt  main.cpp
2023/07/: CMakeLists.txt  main.cpp
2023/08/: CMakeLists.txt  main.cpp
2023/09/: main.cpp
2023/10/: main.cpp
2023/11/: main.cpp
2023/12/: main.cpp
2023/13/: main.cpp
2023/14/: main.cpp
2023/15/: main.cpp
2023/16/: main.cpp
2023/17/: main.cpp
2023/18/: main.cpp
2023/19/: main.cpp
2023/20/: main.cpp
2023/21/: main.cpp
2023/22/: main.cpp
2023/23/: main.cpp
2023/24/: main.cpp
2023/25/: main.cpp
2024/cpp/: CMakeLists.txt
2024/cpp/src/: atomic_buffers_reset.comp  atomic_buffers_reset_comp.h  chars_shared.h  commonrender.cpp  commonrender.h  commons.cpp  commons.h  gputexture.h  int64.comp  int64_shared.h
2024/cpp/src/01/: d01.cpp  d01a.comp  d01a_comp.h  d01b.comp  d01b_comp.h  findnumbers.comp  findnumbers_comp.h  parsenumbers.comp  parsenumbers_comp.h  radixsort.comp  radixsort_comp.h  simplesort.comp  simplesort_comp.h
2024/cpp/src/02/: d02.comp  d02.cpp  d02_comp.h
2024/cpp/src/03/: atomic_buffers_reset.comp  atomic_buffers_reset_comp.h  d03.cpp  d03_calculate_sums.comp  d03_calculate_sums_comp.h  parse_sums_dos_donts.comp  parse_sums_dos_donts_comp.comp  parse_sums_dos_donts_comp.h  parse_sums_dos_donts_comp_comp.h
2024/cpp/src/04/: d04.cpp  d04_calculate_xmas.comp  d04_calculate_xmas_comp.h
2024/cpp/src/05/: calculate_middle_numbers_d05.comp  calculate_middle_numbers_d05_comp.h  d05.cpp  parse_d05.comp  parse_d05_comp.h
2024/cpp/src/06/: d06.comp  d06.cpp  d06_comp.h
2024/cpp/src/07/: d07.comp  d07.cpp  d07_calculate_sum.comp  d07_calculate_sum_comp.h  d07_comp.h  d07_parse.comp  d07_parse_comp.h
2024/cpp/src/08/: d08.comp  d08.cpp  d08_comp.h
2024/cpp/src/09/: d09.comp  d09.cpp  d09_comp.h
2024/cpp/src/10/: d10.comp  d10.cpp  d10_comp.h
2024/cpp/src/11/: d11.comp  d11.cpp  d11_comp.h
2024/cpp/src/12/: d12.comp  d12.cpp  d12_comp.h
2024/cpp/src/13/: d13.comp  d13.cpp  d13_comp.h
2024/cpp/src/14/: d14.comp  d14.cpp  d14_comp.h  d14_shared.h
2024/cpp/src/15/: d15.comp  d15.cpp  d15_comp.h  d15_shared.h
2024/cpp/src/16/: d16.cpp
2024/cpp/src/17/: d17.cpp
2024/cpp/src/18/: d18.cpp
2024/cpp/src/19/: d19.cpp
2024/cpp/src/20/: d20.cpp
2024/cpp/src/21/: d21.cpp
2024/cpp/src/22/: d22.cpp
2024/cpp/src/23/: d23.cpp
2024/cpp/src/24/: d24.cpp
2024/cpp/src/25/: d25.cpp
2024/zig/01/src/: main.zig
2025/01/: 01.py
2025/02/: 02.py
2025/03/: 03.py
2025/04/: 04.py
2025/05/: 05.py
2025/06/: 06.py
2025/07/: 07.py
2025/08/: 08.py
2025/09/: 09.py
2025/10/: 10.py
2025/11/: 11.py
2025/12/: 12.py
